<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoreActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:minWidth="70dp"
            app:cardCornerRadius="12dp"
            app:cardBackgroundColor="@color/md_theme_tertiary"
            android:layout_gravity="center_horizontal"
            android:translationY="35dp"
            android:translationZ="10dp">
            <TextView
                android:id="@+id/final_score"
                android:layout_width="wrap_content"
                android:minWidth="56dp"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:layout_marginHorizontal="8dp"
                android:translationY="17dp"
                android:textColor="@color/md_theme_onTertiary"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        app:cardCornerRadius="12dp"
                        app:cardBackgroundColor="@color/md_theme_tertiaryContainer">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="14dp"
                android:paddingVertical="12dp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/correct_answer_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginTop="26dp"
                    android:layout_marginBottom="6dp"
                    android:textColor="@color/md_theme_onTertiaryContainer"
                    android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall" />

                <TextView
                    android:id="@+id/result_difficulty_multiplier"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/md_theme_onTertiaryContainer"
                    android:textAppearance="@style/TextAppearance.Material3.BodySmall" />

                <TextView
                    android:id="@+id/result_question_quantity_multiplier"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/md_theme_onTertiaryContainer"
                    android:textAppearance="@style/TextAppearance.Material3.BodySmall" />

                <TextView
                    android:id="@+id/time_spend_multiplier_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginBottom="12dp"
                    android:textColor="@color/md_theme_onTertiaryContainer"
                    android:textAppearance="@style/TextAppearance.Material3.BodySmall" />

                <TextView
                    android:id="@+id/score_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_marginBottom="2dp"
                    android:ellipsize="none"
                    android:singleLine="false"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                    android:textColor="@color/md_theme_onTertiaryContainer" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:cardBackgroundColor="@color/md_theme_surfaceContainerLow"
            android:layout_weight="1"
            android:layout_marginHorizontal="14dp"
            android:layout_marginVertical="22dp"
            app:cardCornerRadius="12dp"
            android:elevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/title_best_scores"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginTop="6dp"
                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_scores"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button_retry"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="40dp"
            android:minWidth="120dp"
            android:text="@string/button_retry"
            android:onClick="restartQuizz"
            android:theme="@style/PrimaryElevatedButton" />

        <Button
            android:id="@+id/button_start_new_quizz"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="12dp"
            android:layout_gravity="center"
            android:text="@string/button_start_new_quizz"
            android:onClick="startNewQuizz"
            android:theme="@style/PrimaryElevatedButton" />

        <Button
            android:id="@+id/button_home"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="12dp"
            android:gravity="center"
            android:text="@string/button_navigate_home"
            android:onClick="goToHome"
            android:layout_gravity="center"
            style="@style/Widget.Material3.Button.TextButton" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>